--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
+.input-text {
   text-align: center;
+  line-height: 2em;
+  border: 1px solid gray;
+  border-radius: 5px;
+  margin: 0 5px;
+  font-style: italic;
+  font-weight: bold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.field {
   align-items: center;
+  justify-content: flex-start;
+  display: flex;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.i-field {
+  display: flex;
+  justify-content: flex-start;
+}
+
+input[type=number] {
+  appearance: none;
+}
+
+.info {
+  border: 2px solid gray;
+  border-radius: 5px;
+}
+
+.i_50 {
+  margin: 0 auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+label {
+  font-weight: bold;
+}
+
+.title {
+  padding: 1em;
+  width: 100%;
+  text-align: center;
+  background: #000000;
   color: white;
+  text-shadow: 3px 5px 3px blue;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  padding: 2em;
+  border: 2px solid gray;
+  border-radius: 5px;
 }
